--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-pandas>=1.3
-numpy>=1.21
-matplotlib>=3.4
-scikit-learn>=1.0
-xgboost>=1.6
-tensorflow==2.12.0
-ta>=0.10.2
-requests>=2.26
-yfinance>=0.2
-python-telegram-bot>=13.15
-streamlit
+pandas
+numpy
+matplotlib
+ta
+yfinance
+requests
+scikit-learn
+xgboost
+tensorflow
+joblib
+pytz
+mplfinance
